openshift/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantx-landing
  labels:
    app: quantx-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantx-landing
  template:
    metadata:
      labels:
        app: quantx-landing
    spec:
      containers:
        - name: quantx-landing
          image: nginx:alpine # will be replaced by pipeline via 'oc set image'
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
