openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantx-landing
  labels:
    app: quantx-landing
spec:
  selector:
    app: quantx-landing
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
