openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quantx-landing
  labels:
    app: quantx-landing
spec:
  to:
    kind: Service
    name: quantx-landing
  port:
    targetPort: http
  tls:
    termination: edge
